Fix editor status bar clipping

--- a/src/containers/App.module.css
+++ b/src/containers/App.module.css
@@ -26,7 +26,7 @@
   grid-area: editor;
   display: flex;
   justify-content: flex-start;
-  align-items: flex-start;
+  align-items: stretch;
   padding-top: 10px;
   padding-left: 10px;
   overflow-y: hidden;
