--- a/src/containers/Editor.module.css
+++ b/src/containers/Editor.module.css
@@ -2,8 +2,30 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  align-items: flex-start;
+  align-items: stretch;
   width: 100%;
+  height: 100%;
+  min-height: 0;
+}
+
+.editorMainColumn {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  min-height: 0;
+}
+
+.editorSidebar {
+  display: flex;
+  flex: 1 1 320px;
+  flex-direction: column;
+  min-width: 320px;
+  margin-left: 8px;
+  margin-right: 16px;
+}
+
+.editorSidebarTop {
+  margin-bottom: 10px;
 }
 
 .fbContainer {
